[Bug Fixed]:  1. Browsers cache invalidated so after sign out back button will redirect to sign in page, 2. Iphone viewport problem solved, so now iphone will be responsive, 3. Homepage 3rd section Icons alignment problem fixed

--- a/app/assets/stylesheets/brands_home.scss
+++ b/app/assets/stylesheets/brands_home.scss
@@ -357,7 +357,7 @@ ul.menu-item li {
   font-size: 20px;
   font-family: 'Varela', sans-serif;
   font-weight: 400;
-  padding-left: 11%;
+  padding-left: 14px;
   text-align: left;
   width: 60%;
   text-align: center;
