--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -952,6 +952,10 @@ textarea#company-short-bio{
   width: 100%;
 }
 
+.main-header .sidebar-toggle:hover {
+  color: #72afd2;
+}
+
 
 
 
